# umbrel-details-gui

./: CHANGELOG.md  CMakeLists.txt  MainWidget.cpp  MainWidget.h  README.md  config.h  main.cpp  umbrel-details.pro  umbrel-details.qrc  window.cpp  window.h
.github/workflows/: push.yml  tag.yml
qrcode/: LICENSE
